--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!--<tr>
                         <td>
                             <span class="{{ bor_colors(dict_sheet[18].get('BOR')) }}"></span>
                         </td>
@@ -40,7 +40,7 @@
                         <td>{{ dict_sheet[18].get('Discharge') }}</td>
                         <td> {{ maxhours(dict_sheet[18].get('Last_updated')) }} hr
                         </td>
-                    </tr>
+                    </tr>-->
                     <tr>
                         <td><span class="{{ bor_colors(dict_sheet[19].get('BOR')) }}"></span>
                         </td>
@@ -63,8 +63,8 @@
                         <td>{{ dict_sheet[20].get('Discharge') }}</td>
                         <td>{{ maxhours(dict_sheet[20].get('Last_updated')) }} hr
                         </td>
-                    <!--</tr>
-                    <tr>
+                    </tr>
+                    <!--<tr>
                         <td><span class="{{ bor_colors(dict_sheet[22].get('BOR')) }}"></span></td>
                         <td>KUIPSAS</td>
                         <td id='malekuipsas'>{{ dict_sheet[22].get('Availability_male') }}</td>
@@ -231,7 +231,7 @@
                                         <option value="" disabled selected>
                                             Select PKRC
                                         </option>
-                                        <option value="sukpa">SUKPA</option>
+                                        <!--<option value="sukpa">SUKPA</option>-->
                                         <option value="ilkkm">ILKKM</option>
                                         <option value="ilkkm_covid">ILKKM(COVID)</option>
                                         <!---<option value="kuipsas">KUIPSAS</option>--->
