--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <span><a type="button" class="btn btn-primary" href="{{ url_for('index') }}" data-toggle="tooltip"
                         data-placement="top" title="UCC Bedwatcher"><i class="fas fa-bed fa-lg"></i></a>
-                    <a type="button" class="btn btn-primary" href="{{ url_for('statistic') }}" data-toggle="tooltip"
-                            data-placement="top" title="UCC Statistic"><i class="fas fa-chart-bar fa-lg"></i></a></span>
+                    <!--<a type="button" class="btn btn-primary" href="{{ url_for('statistic') }}" data-toggle="tooltip"
+                            data-placement="top" title="UCC Statistic"><i class="fas fa-chart-bar fa-lg"></i></a>--></span>
                 </ul>
             </div>
         </nav>
