--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                         <td> {{ maxhours(dict_sheet[19].get('Last_updated')) }} hr
                         </td>
                     </tr>
-                    <tr>
+                    <!--<tr>
                         <td><span class="{{ bor_colors(dict_sheet[20].get('BOR')) }}"></span></td>
                         <td>ILKKM(COVID)</td>
                         <td id='maleilkkm_covid'>{{ dict_sheet[20].get('Availability_male') }}</td>
@@ -64,7 +64,7 @@
                         <td>{{ maxhours(dict_sheet[20].get('Last_updated')) }} hr
                         </td>
                     </tr>
-                    <!--<tr>
+                    <tr>
                         <td><span class="{{ bor_colors(dict_sheet[22].get('BOR')) }}"></span></td>
                         <td>KUIPSAS</td>
                         <td id='malekuipsas'>{{ dict_sheet[22].get('Availability_male') }}</td>
@@ -85,7 +85,7 @@
                         <td>{{ dict_sheet[23].get('Discharge') }}</td>
                         <td> {{ maxhours(dict_sheet[23].get('Last_updated')) }} hr
                         </td>
-                    </tr>---->
+                    </tr>
                     <tr>
                         <td><span class="{{ bor_colors(dict_sheet[21].get('BOR')) }}"></span></td>
                         <td>Maran</td>
@@ -97,7 +97,7 @@
                         <td>{{ maxhours(dict_sheet[21].get('Last_updated')) }} hr
                         </td>
                     </tr>
-                    <!----<tr>
+                    <tr>
                         <td><span class="{{ bor_colors(dict_sheet[27].get('BOR')) }}"></span></td>
                         <td>Temerloh</td>
                         <td id='maletemerloh'>{{ dict_sheet[27].get('Availability_male') }}</td>
@@ -107,7 +107,7 @@
                         <td>{{ dict_sheet[27].get('Discharge') }}</td>
                         <td> {{ maxhours(dict_sheet[27].get('Last_updated')) }} hr
                         </td>
-                    </tr>---->
+                    </tr>
                     <tr>
                         <td><span class="{{ bor_colors(dict_sheet[28].get('BOR')) }}"></span></td>
                         <td>UNITEN</td>
@@ -119,7 +119,7 @@
                         <td> {{ maxhours(dict_sheet[28].get('Last_updated')) }} hr
                         </td>
                     </tr>
-                    <!---<tr>
+                    <tr>
                         <td><span class="{{ bor_colors(dict_sheet[26].get('BOR')) }}"></span></td>
                         <td>IPG Lipis</td>
                         <td id='maleipglipis'>{{ dict_sheet[26].get('Availability_male') }}</td>
@@ -233,13 +233,13 @@
                                         </option>
                                         <!--<option value="sukpa">SUKPA</option>-->
                                         <option value="ilkkm">ILKKM</option>
-                                        <option value="ilkkm_covid">ILKKM(COVID)</option>
+                                        <!--<option value="ilkkm_covid">ILKKM(COVID)</option>-->
                                         <!---<option value="kuipsas">KUIPSAS</option>--->
                                         <!---<option value="ump">UMP</option>--->
-                                        <option value="maran">Maran</option>
+                                        <!--<option value="maran">Maran</option>-->
                                         <!----<option value="ipglipis">IPG Lipis</option>--->
                                         <!----<option value="temerloh">Temerloh</option>---->
-                                        <option value="uniten">UNITEN</option>
+                                        <!--<option value="uniten">UNITEN</option>-->
                                         <!-----<option value="rompin">Rompin</option>----->
                                         <!-----<option value="azzahra">Azzahra Kuantan(S)</option>>--->
                                         <!---<option value="sulaiman_t">Sulaiman Temerloh(S)</option>--->
