--- a/templates/hospital.html
+++ b/templates/hospital.html
@@ -241,7 +241,7 @@
         </div>
         <br>
         <br>
-        <div class="container">
+        <!--<div class="container">
             <table class="table">
                 <thead>
                     <tr>
@@ -292,7 +292,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </div>-->
         <br>
         <br>
         <br>
