--- a/templates/index.html
+++ b/templates/index.html
@@ -302,7 +302,7 @@
 </div>
 <br>
 <br>
-<div class="container">
+<!--<div class="container">
     <table class="table">
         <thead>
             <tr>
@@ -353,7 +353,7 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div>-->
 <br>
 <br>
 <br>
